--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<header>
 			<div class="logo">
 				<a href="#home">
-					<img src="img/logo_transparent.png" alt="" />
+					<img src="img/icon.png" alt="" />
 				</a>
 			</div>
 			<button class="nav-toggle" aria-label="toggle navigation">
