added back to top arrow

--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
 			</div>
 			<!-- / Portfolio item -->
 		</section>
-		<a class="arrow" href="#top">&#11165;</a>
+		<a class="arrow" href="#top"><i class="far fa-arrow-alt-circle-up"></i></a>
 		<!--* Footer -->
 		<footer class="footer">
-			<a href="mailto:laura.laane@gmail.com" class="footer__link">Let's talk!</a>
+			<a href="mailto:laura.laane@gmail.com" class="footer__link">Contact me</a>
 
 			<ul class="social-list">
 				<li class="social-list__item">
