--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			<div class="about-me__body">
 				<p>
 					I´m an aspiring web developer, currently focusing on front-end and improving my knowledge of React and
-					Javascript from various online courses, with the future goal to learn back-end also. I like to learn and
-					experience new things and be surrounded by people from who to learn something.
+					Javascript from various online courses, with a future goal to also learn back-end. I like to gain new
+					experiences and knowledge and be surrounded by people from who to learn something.
 				</p>
 				<p>
 					Born and raised in South-Estonia. In the past I have got IT systems administration bachelor's degree in 2016,
