--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 		<!-- stylesheet for normalizing the styles, so the page looks the same on different browsers -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 		<!-- font awesome -->
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-			integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-			crossorigin="anonymous"
-		/>
+		<script src="https://kit.fontawesome.com/ab10960214.js" crossorigin="anonymous"></script>
 		<!-- fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;800&display=swap" rel="stylesheet" />
@@ -269,6 +264,10 @@
 					<a href="https://twitter.com/la_laane" class="social-list__link" target="_blank"
 						><i class="fab fa-twitter"></i
 					></a>
+				</li>
+				<li class="social-list__item social-list__moved">
+					<a href="/img/paypalqr.jpg" class="social-list__link" target="_blank"
+						><i class="fa-regular fa-sack-dollar">$</i></a>
 				</li>
 			</ul>
 		</footer>
