--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 					></a>
 				</li>
 				<li class="social-list__item social-list__moved">
-					<a href="/img/paypalqr.jpg" class="social-list__link" target="_blank"
+					<a href="https://lalaane.github.io/img/paypalqr.jpg" class="social-list__link" target="_blank"
 						><i class="fa-regular fa-sack-dollar">$</i></a>
 				</li>
 			</ul>
